# ziz-backend

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/python-base/: Dockerfile  devcontainer.json
.github/workflows/: deploy.yml  test.yml
docs/: overview.md
tests/: test_yaml.py
ziz/: __init__.py
ziz/analysis/: __init__.py
ziz/api/: main.py
ziz/api/middleware/: __init__.py
ziz/api/models/: __init__.py
ziz/api/services/: __init__.py
ziz/api/utils/: __init__.py
ziz/core/: __init__.py
ziz/core/database/: __init__.py
ziz/core/events/: __init__.py
ziz/ingestion/: __init__.py
ziz/sdk/: __init__.py
ziz/sdk/client/: __init__.py
ziz/sdk/decorators/: __init__.py
ziz/sdk/types/: __init__.py
ziz/sdk/utils/: __init__.py
