[project]
name = "python-template"
version = "0.1.0"
description = "The basic template for python projects"
authors = [
    {name = "Oz Shaked",email = "oz@mozico.nl"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
commitizen = "^4.7.0"
pytest = "^8.3.5"
pre-commit = "^4.2.0"
